--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,10 @@
 {
 	"id": "obsidian-planner",
 	"name": "Planner",
-	"version": "1.3.0",
+	"version": "0.0.2",
 	"minAppVersion": "0.11.10",
 	"description": "Make planning your trip or event easier by rendering a calendar from event information found in your notes.",
-	"author": "Adam Coddington <me@adamcoddington.net>",
-	"authorUrl": "https://coddingtonbear.net/",
+	"author": "Justin Parra <contact@parrajust.in>",
+	"authorUrl": "https://parrajust.in/",
 	"isDesktopOnly": false
 }
