--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "rollup --config rollup.config.mjs -w",
     "build": "rollup --config rollup.config.js --environment BUILD:production",
+    "lint": "npx eslint src/** --fix",
     "test": "jest"
   },
   "keywords": [],
@@ -19,6 +20,9 @@
     "@types/jest": "29.5.11",
     "@types/luxon": "2.0.4",
     "@types/node": "20.11.10",
+    "eslint": "8.56.0",
+    "eslint-config-prettier": "9.1.0",
+    "eslint-plugin-prettier": "5.1.3",
     "jest": "29.7.0",
     "obsidian": "1.4.11",
     "prettier": "3.2.4",
@@ -34,7 +38,8 @@
     "@fullcalendar/list": "6.1.10",
     "@fullcalendar/luxon": "6.1.10",
     "@fullcalendar/timegrid": "6.1.10",
-    "filtrex": "2.2.3",
+    "@typescript-eslint/eslint-plugin": "6.20.0",
+    "@typescript-eslint/parser": "6.20.0",
     "luxon": "1.28.0"
   }
 }
