--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,11 @@
 {
 	"id": "obsidian-planner",
 	"name": "Planner",
-	"version": "0.0.2",
-	"minAppVersion": "0.11.10",
+	"version": "0.1.0",
+	"minAppVersion": "1.0.3",
 	"description": "Make planning your trip or event easier by rendering a calendar from event information found in your notes.",
 	"author": "Justin Parra <contact@parrajust.in>",
 	"authorUrl": "https://parrajust.in/",
+	"fundingUrl": "https://www.buymeacoffee.com/parrajustin",
 	"isDesktopOnly": false
 }
