Make release workflow - Fix package.json rollup error - Add release yaml

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "main.js",
   "scripts": {
     "dev": "rollup --config rollup.config.mjs -w",
-    "build": "rollup --config rollup.config.js --environment BUILD:production",
+    "build": "rollup --config rollup.config.mjs --environment BUILD:production",
     "lint": "npx eslint src/** --fix",
     "test": "jest"
   },
